# game5PYGAME_dungeon

./: README.md  enemy_class.py  game_class.py  gameobject_class.py  lvls.json  nonplayercharacter_class.py  playercharacter_class.py  pyproject.toml  requirements.txt  save_file.json  start.py
assets/: tiny_dungeon_lvl1.tmx  tiny_dungeon_lvl2.tmx  tiny_dungeon_prologue.tmx  tiny_town.tsx
assets/lvls/0.Prologue/: tiny_dungeon_prologue.tmx
assets/lvls/0.Prologue/Rooms/: Room_1.tmx  Room_2.tmx
assets/lvls/2/: tiny_dungeon_lvl2.tmx
classes/: enemy_class.py  game_class.py  playercharacter_class.py
classes/base_classes/: spriteclass.py
json/: save_file.json
teeny_tiny_game/: reset_save.py  start.py
teeny_tiny_game/assets/: tiny_town.tsx
teeny_tiny_game/assets/kenney_tiny-dungeon/Tiled/: sampleMap.tmx
teeny_tiny_game/assets/lvls/1/: tiny_dungeon_lvl1.tmx
teeny_tiny_game/classes/: game_class.py  nonplayercharacter_class.py
teeny_tiny_game/functions/: check_files.py
teeny_tiny_game/json/: lvls.json  save_file.json
